folding regions for functions, macros, if/for/while blocks

--- a/plus/build.gradle
+++ b/plus/build.gradle
@@ -16,7 +16,7 @@ patchPluginXml {
 }
 */
 intellij {
-    plugins project(':simple-highlighter')
+    plugins += project(':simple-highlighter')
 }
 
 jar {
