--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '192.1.1'
+    version '192.2.dev2'
     sourceCompatibility = 1.8
 
     repositories {
@@ -42,12 +42,13 @@ subprojects {
         pluginName "$rootProject.name-$project.name"
 //        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
 //        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.5728.98'
-        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/192.6262.9/'
+        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/192.6262.58'
         downloadSources false
 //    alternativeIdePath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
 //    version '183.4284.36'
-//    plugins 'PsiViewer:191.4212'
-        plugins /*'PsiViewer:192-SNAPSHOT', */'java'
+//    plugins += 'PsiViewer:191.4212'
+        plugins += 'PsiViewer:192-SNAPSHOT'
+        plugins += 'java'
         updateSinceUntilBuild false
     }
 
@@ -55,8 +56,20 @@ subprojects {
         archivesBaseName = intellij.pluginName
     }
 
+    test {
+        outputs.upToDateWhen { false }
+    }
+
     task runIC_192_5728(type: RunIdeTask){
         ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.5728.98'
+    }
+
+    task runIC_192_6262_58(type: RunIdeTask){
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/192.6262.58'
+    }
+
+    task runIC_192_6262_41(type: RunIdeTask){
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/192.6262.41'
     }
 
     task runCLion_191(type: RunIdeTask){
@@ -108,7 +121,8 @@ subprojects {
 
 class RunCLion192Task extends RunIdeTask {
     RunCLion192Task(){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-0/192.5728.70/'
+//        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-0/192.5728.70/'
+        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-0/192.6262.62/'
         jbrVersion '11_0_2b159'
     }
 }
