--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '193.1.1'
+    version '193.2.1'
     sourceCompatibility = 1.8
 
     repositories {
@@ -41,7 +41,7 @@ subprojects {
     intellij {
         pluginName "$rootProject.name-$project.name"
 //        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-0/191.7141.44'
-        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/193.3519.25'
+        localPath 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-0\\193.5233.12'
 //        localPath '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.6817.14'
         downloadSources false
 //        plugins += 'PsiViewer:192-SNAPSHOT'
@@ -61,20 +61,21 @@ subprojects {
         outputs.upToDateWhen { false }
     }
 
-    task runCLion_193(type: RunIdeTaskJbr11){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/CLion/ch-3/193.4932.12/'
+    task runCLion_193(type: RunIdeTask){
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-1\\193.5233.56'
     }
 
+    task runIC_193_5662(type: RunIdeTask){
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-1\\193.5662.53'
+    }
+
+/*
     task runIC_193(type: RunIdeTaskJbr11){
         ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-3/193.3519.25/'
     }
 
     task runIC_192(type: RunIdeTaskJbr11){
         ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-2/192.6817.14'
-    }
-
-    task runUltimate_192_6262_58(type: RunIdeTaskJbr11){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-U/ch-0/192.6262.58'
     }
 
     task runUltimate_193(type: RunIdeTaskJbr11){
@@ -98,31 +99,12 @@ subprojects {
     task runCLion_192(type: RunCLion192Task){
     }
 
-    task runCLion_192_Demo_Marketplace(type: RunCLion192Task){
-    }
-
     task Copy_182(type: Copy) {
         dependsOn(prepareSandbox)
         from "${intellij.sandboxDirectory}/plugins182"
         into "${intellij.sandboxDirectory}/plugins"
     }
-
-    task runAndroidStudio_33_182(type: RunIdeTask){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-0/182.5314842/'
-        dependsOn(Copy_182)
-    }
-
-    task runAndroidStudio_34_183(type: RunIdeTask){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-1/183.5522156/'
-    }
-
-    task runAndroidStudio_35_191(type: RunIdeTask){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/AndroidStudio/ch-2/191.5675373/'
-    }
-
-    task runIC_182(type: RunIdeTask){
-        ideaDirectory '/home/artem/.local/share/JetBrains/Toolbox/apps/IDEA-C/ch-1/182.5262.2/'
-    }
+*/
 
     tasks.withType(RunIdeTask).forEach {task -> task.dependsOn(prepareSandbox)}
 }
